day7: moved Umfrage.rda to lib

--- a/Conclusions.Rmd
+++ b/Conclusions.Rmd
@@ -88,7 +88,7 @@ Es gibt verschiedene Moeglichkeiten Daten zu lesen. Der Readbefehl haengt vom Da
 \newline
 
 ```{r}
-load("C:/Users/mknoefler/OneDrive/Documents/BigData/R/Umfrage.rda")
+load("lib/Umfrage.rda")
 ```
 
 ## Uebersicht der Daten
@@ -623,8 +623,16 @@ Ein [Dendogram](https://rpubs.com/gaston/dendrograms) zeigt hirarchisch gecluste
 Natuerlich gibt es auch diverse AI Services von Kommerziellen Anbietern wie z.B.[Microsoft Azure AI + Machine Learning](https://azure.microsoft.com/en-us/services/machine-learning-studio/), [Google AI](https://cloud.google.com/products/ai/), oder [Amazon SageMaker](https://aws.amazon.com/machine-learning/). Diese Produkte sind auf den ersten Blick sehr simple, man kommt jedoch wenn die Aufgabe etwas komplexer wird sehr schnell an die Grenzen. Man hat nicht wirklich Einfluss auf das was hinter diesen Drag&Drop Bildchen abgeht.
 
 # Tag 7 - Neuronale Netze und Faktor- / Clusteranalyse
-## Neuronale Netze - Konzepte
-Neuronen feuern wenn sie einen gewissen Schwellwert erreicht haben, die sogenannte Aktivierungs-, oder Sigmoidfuntion. Ein Neuron kann mehrere Eingaenge haben, jedoch hat es jeweils nur einen Ausgang, was entlang der Azons zu den Terminals wieder als Eingang (Dendriten) anderer Neuronen dienen kann.
+## Neuronale Netze
+
+###Konzepte
+Neuronen feuern wenn sie einen gewissen Schwellwert erreicht haben, die sogenannte **Aktivierungs-**, oder **Sigmoidfuntion**. Ein Neuron kann mehrere Eingaenge haben, jedoch hat es jeweils nur einen Ausgang, was entlang der Azons zu den Terminals wieder als Eingang (Dendriten) anderer Neuronen dienen kann. So kann ein neuronales Netz in n **Schichten** aufgebaut sein. Eingangsschicht, Ausgangsschicht und dazwischen n versteckte Schichten (hidden Layers).
+
+### Gewichte
+Die Gewichte sind das wichtigste in neuronalen Netzen, damit 'lernen' sie. Das Eingangssignal wird mit dem Gewicht multipliziert. Das Neuron summiert nun alle Werte aller Eingangsignale und falls dies den Schwellwert erreicht, 'feuert' das Neuron den Ausgangswert. Die Gewichte werden solange veraendert, bis das Resultat ganz am Ende des Netzes dem entspricht was man erwartet. Dies nennt man **supervised learning**, da man weiss was herauskommen sollte und das System solange lernen laesst, bis Soll- und Istausgabe uebereinstimmen. Wird der Fehler wieder vorne ins Netz gespiesen, nennt man dies **Fehlerrueckfuehrung (Backpropagation)**.
+\
+Beim **unsupervised learning** wird kein Output vorgegeben. Die Gewichtsveraenderungen erfolgen in Abhaengigkeit der
+Aehnlichkeit der Gewichte mit den Inputreizen.
 
 ## Faktoranalyse
 
