--- a/Conclusions.Rmd
+++ b/Conclusions.Rmd
@@ -61,9 +61,9 @@ options(warn = -1)
 * Massnahmen ergreifen
     + Beispiele koennten sein, ein Pikettdienst, gezielte efforts in Codestabilitaet/Bugfixing/Refactoring, temporaer mehr Serverpower
     
-## Data mining in Wlan-Daten
+## Data Mining in Wlan-Daten
 * Anomaly detection
-    +Kann Hinweis fuer ein kommendes Problem sein
+    + Kann Hinweis fuer ein kommendes Problem sein
 * Association Rule Learning
     + Pruefungs- / Lernzeiten, Mensacrowd, Belegung der Lernplaetze
 * Clustering
@@ -80,7 +80,7 @@ options(warn = -1)
 # Tag 2 - Arbeiten mit R
 
 ## Daten einlesen
-Es gibt verschiedene Moeglichkeiten Daten zu lesen. Der Readbefehl haengt vom Dateityp der Quelle ab. Die bis anhing fuer uns wichtigsten sind:
+Es gibt verschiedene Moeglichkeiten Daten zu lesen. Der Readbefehl haengt vom Dateityp der Quelle ab. Die bis zum jetzigen Zeitpunkt fuer uns wichtigsten sind:
 
 * read.table("FullPath/FileName.txt")
 * read.csv("FullPath/FileName.csv")
@@ -94,18 +94,20 @@ load("lib/Umfrage.rda")
 ```
 
 ## Uebersicht der Daten
-Es ist ratsam sich anfangs jeweils einen groben Ueberblick ueber die geladenen Daten zu verschaffen. Dazu sind die Befehle **dim**, **summary**, **str** und **head** sehr hilfreich.\newline Alle Befehle in R sind online dokumentiert und koennen mit dem Fragezeichen (z.B. ?head) aufgerufen werden.
+Es ist ratsam sich anfangs jeweils einen groben Ueberblick ueber die geladenen Daten zu verschaffen. Dazu sind die Befehle **dim**, **summary**, **str** und **head** sehr hilfreich.
+\
+Alle Befehle in R sind online dokumentiert und koennen mit dem Fragezeichen (z.B. ?head) aufgerufen werden.
 ```{r}
 dim(Umfrage) # gibt Auskunft ueber die Dimension der Daten
 summary(Umfrage) # zeigt deskriptive Statistiken an
 str(Umfrage) # zeigt die Eigenschaften (Variablen, Columns, ...) an
-head(Umfrage,5) # zeigt die ersten 10 Datensaetze an
+head(Umfrage,5) # zeigt die ersten x Datensaetze an (Default ist 6)
 ```
 
 ## Dataframe
 
 ### Zufallswerte
-Im folgenden wird ein Data Frame mit verschiedenen, rein zufaelligen Werten erzeugt. Entweder wird ein Observations count via **Shiny App** als Parameter ins **RMarkdown** gegeben, ansonsten wird ein Defaultwert genommen.
+Im Folgenden wird ein Data Frame mit verschiedenen, rein zufaelligen Werten erzeugt. Entweder wird ein Observations count via **Shiny App** als Parameter ins **RMarkdown** gegeben, ansonsten wird ein Defaultwert genommen.
 ```{r}
 minObservations<-10
 if (params$n == "NA" | params$n < minObservations) {
@@ -129,9 +131,6 @@ df<-data.frame(ids,sex,age,size,income,education)
 head(df,minObservations)
 df$sex.f<-as.factor(df$sex)
 dim(df)
-head(df)
-# df$income.f<-as.factor(df$income,c(0,90000,130000,Inf))
-# df
 ```
 
 ### Duplikate
